# based-browser

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  clippy.toml  lefthook.yml  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: gate-build.sh  protect-config.sh  rustfmt-hook.sh  safety-bash.sh  session-context.sh
.github/workflows/: ci.yml
.specs/: HANDOFF.md
.specs/features/devtools-v2/: spec.md
.specs/features/m6-recursos-usuario/: context.md  spec.md  tasks.md
.specs/features/m7-devtools/: context.md  spec.md  tasks.md
.specs/features/m8-sustentabilidade/: spec.md  tasks.md
.specs/features/m9-redesign-ui/: spec.md
.specs/project/: HARNESS-ROADMAP.md  PROJECT.md  ROADMAP.md  STATE.md
crates/basedbrowser/: Cargo.toml
crates/basedbrowser/src/: devtools_client.rs  gpu_bridge.rs  input.rs  main.rs  persist.rs
crates/basedbrowser/ui/: app.slint
crates/servo-poc/: Cargo.toml
crates/servo-poc/src/: main.rs
designs/: based-browser.pen
docs/: harness-metrics.md
docs/adr/: 0001-pin-servo-revision.md  0002-pin-servo-0.2.0.md  0003-arquitetura-integracao-m1.md  0004-arquitetura-input-resize-m2.md  0005-arquitetura-render-gpu-m3.md  0006-m3-fechado-zero-copy-validado.md  0007-arquitetura-multi-aba-m4.md  0008-footprint-vs-chromium-m5.md  0009-persistencia-e-downloads-m6.md  0010-devtools-m7.md  0011-sustentabilidade-ci-runbook.md  0012-redesign-ui-m9.md  README.md
docs/runbooks/: atualizar-servo.md  debugar-com-firefox.md
sandbox/: Dockerfile  README.md  docker-compose.yml
scripts/checks/: archgate.sh  check-adr-status.sh  check-servo-pin.sh
scripts/m5/: measure.sh  run.sh
scripts/m5/pages/: heavy.html  idle.html
scripts/m6/: verify-clear.sh  verify-persist.sh
scripts/m6/pages/: persist.html
scripts/m7/: verify-devtools.sh
scripts/m7/pages/: data.json  devtools.html
scripts/update-servo/: run.sh
