[package]
name = "basedbrowser"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# UI / chrome. `raw-window-handle-06` expõe Window::window_handle() (HasWindowHandle +
# HasDisplayHandle) — necessário p/ alimentar o WindowRenderingContext do Servo.
# M3 (ADR-0005): `renderer-femtovg-wgpu` troca o renderer femtovg/GL por femtovg sobre wgpu/Vulkan
# (no Linux) e `unstable-wgpu-28` habilita o import de textura wgpu (`Image::try_from(wgpu::Texture)`)
# + o `BackendSelector::require_wgpu_28`. A API wgpu é acessada via `slint::wgpu_28::wgpu` (mesmo
# crate que o Slint usa — sem dep `wgpu` separada). Ver .specs/project/ROADMAP.md (M3) e ADR-0005.
slint = { version = "1.16", features = [
    "raw-window-handle-06",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
] }

# Motor web (M1). Mesmo pin do ADR-0002 (=0.2.0); re-exporta os RenderingContext.
servo = "=0.2.0"

# Ponte de handles Slint→Servo (ambos em raw-window-handle 0.6) e tipo de tamanho físico.
# Versões casadas com as que o servo 0.2.0 declara (ver crates/servo-poc/Cargo.toml).
raw-window-handle = "0.6"
dpi = "0.1"

# Pipeline de frame (M1, cópia-CPU): URL fixa, fator de escala HiDPI, leitura do frame
# (read_to_image -> image::RgbaImage) e provedor de cripto p/ TLS (mesmo do servo-poc).
url = "2.5"
euclid = "0.22"
image = "0.25"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
