[package]
name = "basedbrowser"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# UI / chrome. `raw-window-handle-06` expõe Window::window_handle() (HasWindowHandle +
# HasDisplayHandle) — necessário p/ alimentar o WindowRenderingContext do Servo.
# M3 (ADR-0005): `renderer-femtovg-wgpu` troca o renderer femtovg/GL por femtovg sobre wgpu/Vulkan
# (no Linux) e `unstable-wgpu-28` habilita o import de textura wgpu (`Image::try_from(wgpu::Texture)`)
# + o `BackendSelector::require_wgpu_28`. A API wgpu é acessada via `slint::wgpu_28::wgpu` (mesmo
# crate que o Slint usa — sem dep `wgpu` separada). Ver .specs/project/ROADMAP.md (M3) e ADR-0005.
slint = { version = "1.16", features = [
    "raw-window-handle-06",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
] }

# M4 (ADR-0007): o chrome saiu da macro inline grande p/ `ui/app.slint`, re-exportado pela macro
# inline (`slint::slint!(export { MainWindow } from "../ui/app.slint");`). Mantém a UI num arquivo
# `.slint` (LSP/preview) SEM `build.rs`/`include_modules!()`: o código gerado por `include_modules!`
# vira fonte do crate e trombaria com os lints `deny` (unwrap/expect) — a expansão da macro inline
# é isenta do clippy. Decisão registrada no ADR-0007.

# Motor web (M1). Mesmo pin do ADR-0002 (=0.2.0); re-exporta os RenderingContext.
servo = "=0.2.0"

# Ponte de handles Slint→Servo (ambos em raw-window-handle 0.6) e tipo de tamanho físico.
# Versões casadas com as que o servo 0.2.0 declara (ver crates/servo-poc/Cargo.toml).
raw-window-handle = "0.6"
dpi = "0.1"

# Pipeline de frame (M1, cópia-CPU): URL fixa, fator de escala HiDPI, leitura do frame
# (read_to_image -> image::RgbaImage) e provedor de cripto p/ TLS (mesmo do servo-poc).
url = "2.5"
euclid = "0.22"
image = "0.25"
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# M3 (ADR-0005): interop GPU zero-copy (ponte Vulkan↔GL↔wgpu em `gpu_bridge.rs`).
# `ash` = bindings Vulkan p/ criar a imagem com memória externa e exportar o FD; a versão CASA com a
# que o wgpu-hal da wgpu-28 usa (0.38.x), pra os tipos `vk::*` unificarem com `as_hal`. `gl` = bindings
# GL crus carregados via `get_proc_address` do surfman p/ as entry-points `*EXT` de memória externa
# (glImportMemoryFdEXT/glCreateMemoryObjectsEXT/glTexStorageMem2DEXT) que o glow 0.17 não expõe.
ash = "0.38"
gl = "0.14"

# M4 (ADR-0007): persistência (favoritos/histórico/sessão de abas) em JSON sob o diretório de config
# do usuário. `dirs` resolve `~/.config/basedbrowser/`. Não é config protegida (deps do crate do app).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
